# scratchimg

./: .gitignore  README.md  pyproject.toml
examples/: examples.py
fonts/: cherry-10-r.pbm  cherry-11-b.pbm  cherry-11-r.pbm  cherry-12-b.pbm  cherry-12-r.pbm  cherry-12-r.pil  cherry-13-b.pbm
src/scratchimg/: __init__.py  blocks.py  bounding_box.py  context.py  misc.py  style.py
